--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Kansas City Trivia</title> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
+</head>
+<body>
+    <p class="timer"></p>
+    <div class="container-fluid">
+        <div class="row d-flex justify-content-center"><img src="assets/images/kc.png" id="background-photo"> 
+            <button class="btn-lg btn-success">Start Game!</button>
+            <div class= "col-12" id="heading">Kansas City Trivia</div>
+            <div class="gameHere">
+                    <div class="row">
+                        <div class="col-4"><div id="timer"></div>
+                        <div class="col-8 question">Question: </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"></div>
+                        <div class="col-8 choices">Answers Here</div>
+                    </div>
+            </div>
+        </div>
+        
 
+
+
+    </div>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="assets/javascript/app.js"></script> 
+</body>
+</html>
